2009-07-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#125361 Incoming call Dialog:Reject Button is Not shown
		  in certain scenario

	* src/home/hd-task-navigator.c (hd_task_navigator_replace_window):
	  Remember the replaced windows, grab them and hide them when the
	  navigator is activated...
	* src/home/hd-render-manager.c (hd_render_manager_set_visibilities):
	  ...so hdrm needn't worry about hiding them itself.

	The problem was that when the incoming call dialog was mapped and
	hdrm sorted out the visibilities, it decided to hide the dialog,
	because we were in tasw view.  Since the dialog was hidden,
	the hd_comp_mgr_should_be_in_portrait() ignored it.

	The problem wouldn't have been apparent with non-fullscreen dialogs
	or with normal application windows.  Only the damned incoming call
	dialog.

2009-07-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#126456 launcher transitions are not fast enough.

	* data/transitions.ini:
	  launcher_in -> 500ms, launcher_in_sub -> 500ms
	  Requested by the ***************** product management.
	  (no offense)

2009-07-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-atoms.c
	* src/mb/hd-atoms.h:
	  Moved the SUPPRESS_ROOT_RECONFIG atom to libmb.
	* src/util/hd-util.c:
	  Updated for that.

	This requires new libmatchbox binary & headers.

2009-07-02  Aapo Kojo <aapo.kojo@nokia.com>

	Release 2.2.61

2009-07-02  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Reinstated maemo-launcher support, this time with the correct exports so that
	the a11y module can be loaded.
	Fixes: NB#101031

	* debian/rules:
	* src/Makefile.am:
	* src/export.map:

2009-07-01  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#121519 - A blank frame like windows is shown on the desktop
	                   (Turns out there were 2 bugs)
	* src/home/hd-render-manager.c: Ensure that calling set_loading_image
	  twice will not leave an otherwise unreferenced actor on the